// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OrganizationCreate render() renders with terms 1`] = `
<SideEffect(DocumentTitle)
  title="Create Organization - Sentry"
>
  <NarrowLayout
    showLogout={true}
  >
    <h3>
      Create a New Organization
    </h3>
    <p>
      Organizations represent the top level in your hierarchy. You'll be able to bundle a collection of teams within an organization as well as give organization-wide permissions to users.
    </p>
    <ApiForm
      apiEndpoint="/organizations/"
      apiMethod="POST"
      cancelLabel="Cancel"
      className="form-stacked"
      errorMessage="Unable to save your changes. Please ensure all fields are valid and try again."
      footerClass="form-actions align-right"
      hideErrors={false}
      initialData={
        Object {
          "defaultTeam": true,
        }
      }
      onSubmitSuccess={[Function]}
      requireChanges={true}
      resetOnError={false}
      submitDisabled={false}
      submitErrorMessage="There was an error saving your changes."
      submitLabel="Create Organization"
      submitLoadingMessage="Saving changes.."
    >
      <TextField
        disabled={false}
        hideErrorMessage={false}
        label="Organization Name"
        name="name"
        placeholder="e.g. My Company"
        required={true}
      />
      <BooleanField
        disabled={false}
        hideErrorMessage={false}
        label={
          <React.Fragment>
            <span>
              <span>
                I agree to the 
              </span>
              <a
                href="https://example.com/terms"
              >
                <span>
                  Terms of Service
                </span>
              </a>
              <span>
                 and the 
              </span>
              <a
                href="https://example.com/privacy"
              >
                <span>
                  Privacy Policy
                </span>
              </a>
            </span>
          </React.Fragment>
        }
        name="agreeTerms"
        required={true}
      />
    </ApiForm>
  </NarrowLayout>
</SideEffect(DocumentTitle)>
`;

exports[`OrganizationCreate render() renders without terms 1`] = `
<SideEffect(DocumentTitle)
  title="Create Organization - Sentry"
>
  <NarrowLayout
    showLogout={true}
  >
    <h3>
      Create a New Organization
    </h3>
    <p>
      Organizations represent the top level in your hierarchy. You'll be able to bundle a collection of teams within an organization as well as give organization-wide permissions to users.
    </p>
    <ApiForm
      apiEndpoint="/organizations/"
      apiMethod="POST"
      cancelLabel="Cancel"
      className="form-stacked"
      errorMessage="Unable to save your changes. Please ensure all fields are valid and try again."
      footerClass="form-actions align-right"
      hideErrors={false}
      initialData={
        Object {
          "defaultTeam": true,
        }
      }
      onSubmitSuccess={[Function]}
      requireChanges={true}
      resetOnError={false}
      submitDisabled={false}
      submitErrorMessage="There was an error saving your changes."
      submitLabel="Create Organization"
      submitLoadingMessage="Saving changes.."
    >
      <TextField
        disabled={false}
        hideErrorMessage={false}
        label="Organization Name"
        name="name"
        placeholder="e.g. My Company"
        required={true}
      />
    </ApiForm>
  </NarrowLayout>
</SideEffect(DocumentTitle)>
`;
